5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1756_1577.log
== TEST (2019-05-22 15:41:50) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange[0:n-1]
d=zeros(n,dtype=int)
d(t)=a*t**2/2+v*t
print(d(t))
-- ERROR:
File "XXXX", line 7
    d(t)=a*t**2/2+v*t
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:38) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange[n-1]
d=zeros(n,dtype=int)
d(t)=a*t**2/2+v*t
print(d(t))
-- ERROR:
File "XXXX", line 7
    d(t)=a*t**2/2+v*t
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:40) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange[n-1]
d=zeros(n,dtype=int)
d(t)=a*t**2/2+v*t
print(d(t))
-- ERROR:
File "XXXX", line 7
    d(t)=a*t**2/2+v*t
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:56) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange[n-1]
d=zeros(n,dtype=int)
d(t)=(a*t**2)/2+v*t
print(d(t))
-- ERROR:
File "XXXX", line 7
    d(t)=(a*t**2)/2+v*t
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:44:39) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange[n-1]
d=zeros(n,dtype=int)
d(t)=(a*t**2)/2 +(v*t)
print(d(t))
-- ERROR:
File "XXXX", line 7
    d(t)=(a*t**2)/2 +(v*t)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:53:31) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange(n)
d=zeros(n)
i=0
while(i<n):
	d[i]=((a*(t[i]**2))/2+v*t[i])
	i=i+1
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:55:18) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleração: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange(n)
d=zeros(n)
i=0
while(i<n):
	d[i]=((a*(t[i]**2)/2)+v*t[i])
	i=i+1
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:55:35) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleracao: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange(n)
d=zeros(n)
i=0
while(i<n):
	d[i]=((a*(t[i]**2)/2)+v*t[i])
	i=i+1
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:56:08) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleracao: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange(n)
d=zeros(n)
i=0
while(i<n):
	d[i]=((a*(t[i]**2)/2)+v*t[i])
	i=i+1
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:56:21) 
-- CODE:
from numpy import*
a=array(eval(input("A aceleracao: ")))
v=array(eval(input("Velocidade inicial: ")))
n=array(eval(input("Numeros inteiros:")))
t=arange(n)
d=zeros(n)
i=0
while(i<n):
	d[i]=((a*(t[i]**2)/2)+v*t[i])
	i=i+1
print(d)

-- EXECUTION TIME:
0.551611
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
